removed python, opting for JS structure

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday Calendar Generator</title>
+    <script src="https://jsuites.net/v4/jsuites.js"></script>
+    <link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
+    <title>Anniversary Calendar Event Generator</title>
+    <script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <body>
-
+    <div id="table-container"></div>
+    <div id="hello"></div>
 </body>
 
 </html>
