--- a/app/static/index.html
+++ b/app/static/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="table-container"></div>
-    <div id="hello"></div>
+    <div id="new-row-button-container"></div>
 
 </body>
 
