--- a/app/static/index.html
+++ b/app/static/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://jsuites.net/v4/jsuites.js"></script>
+    <link rel="stylesheet" href="css/styles.css" type="text/css" />
     <link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
     <title>Anniversary Calendar Event Generator</title>
     <script type="text/javascript" src="js/main.js"></script>
@@ -12,7 +13,9 @@
 
 <body>
     <div id="table-container"></div>
-    <div id="new-row-button-container"></div>
+    <div id="buttons">
+        <div id="new-row-button-container"></div>
+    </div>
 
 </body>
 
