--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://jsuites.net/v4/jsuites.js"></script>
-    <link rel="stylesheet" href="css/styles.css" type="text/css" />
+    <link rel="stylesheet" href="static/css/styles.css" type="text/css" />
     <link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
     <title>Anniversary Calendar Event Generator</title>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="static/js/main.js"></script>
 </head>
 
 <body>
