Added export button, doesn't work yet

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <div id="table-container"></div>
-    <div id="buttons">
+    <div id="buttons-container">
         <div id="new-row-button-container"></div>
-    </div>
+        <div id="export-to-ics-button-container"></div>
 
 </body>
 
